<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2014. Permission to use, copy, modify, distribute and sell this software and its documentation for any purpose is not granted without permission from owner, for more information please contact informeapplications@gmail.com
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_privacy_category"
        android:title="Privacy">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_google_analytics"
            android:summary="Allow us to collect anonymous app usage data to help us make the app better"
            android:title="Anonymous Usage Stats" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_about_category"
        android:title="@string/prefs_about_category">
        <Preference
            android:key="pref_key_appVersion"
            android:summary="@string/prefs_about_appVersion_value"
            android:title="@string/prefs_about_appVersion" />
    </PreferenceCategory>

</PreferenceScreen>