<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager_studentlife_offers_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:clipToPadding="false"
                android:paddingLeft="8dp"
                android:paddingRight="25dp"
                android:paddingTop="8dp" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/card_round"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Explore"
                    android:textColor="#454545"
                    android:textSize="30sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/Coffee"
                        android:layout_width="@dimen/studentlife_explore_icons_size"
                        android:layout_height="@dimen/studentlife_explore_icons_size"
                        android:layout_margin="@dimen/studentlife_explore_icons_margin"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/studentuslife_icons_coffee" />

                    <ImageView
                        android:id="@+id/Eat"
                        android:layout_width="@dimen/studentlife_explore_icons_size"
                        android:layout_height="@dimen/studentlife_explore_icons_size"
                        android:layout_margin="@dimen/studentlife_explore_icons_margin"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/studentuslife_icons_eat" />

                    <ImageView
                        android:id="@+id/Drinks"
                        android:layout_width="@dimen/studentlife_explore_icons_size"
                        android:layout_height="@dimen/studentlife_explore_icons_size"
                        android:layout_margin="@dimen/studentlife_explore_icons_margin"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/studentuslife_icons_drink" />

                    <ImageView
                        android:id="@+id/Shop"
                        android:layout_width="@dimen/studentlife_explore_icons_size"
                        android:layout_height="@dimen/studentlife_explore_icons_size"
                        android:layout_margin="@dimen/studentlife_explore_icons_margin"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/studentuslife_icons_shop" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/card_round"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/Favourites"
                    android:textColor="#454545"
                    android:textSize="30sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/nothing_here"
                    android:textColor="#888888" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>